# agave

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  AGENTS.md  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  HELP.txt  INSTALL.md  Jenkinsfile  LICENSE  LICENSE.txt  README.md  SUPPORT.md  agave.html  agave_renderer.html  c_cpp_properties.json  docker-entrypoint.sh  genindex.html  index.html  objects.inv  pyrightconfig.json  requirements.html  search.html  searchindex.js  tbump.toml
agave_app/: Aperture.cpp  Aperture.h  ApertureWidget.cpp  ApertureWidget.h  AppearanceDockWidget.cpp  AppearanceDockWidget.h  AppearanceDockWidget2.cpp  AppearanceDockWidget2.h  AppearanceSettingsWidget.cpp  AppearanceSettingsWidget.h  AppearanceWidget.cpp  AppearanceWidget.h  ArealightDockWidget.cpp  ArealightDockWidget.h  ArealightWidget.cpp  ArealightWidget.h  CMakeLists.txt  CacheSettings.cpp  CacheSettings.h  CacheSettingsDockWidget.cpp  CacheSettingsDockWidget.h  CacheSettingsWidget.cpp  CacheSettingsWidget.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraDockWidget.cpp  CameraDockWidget.h  CameraWidget.cpp  CameraWidget.h  CollapsibleDockWidget.cpp  CollapsibleDockWidget.h  Controls.cpp  Controls.h  Film.cpp  Film.h  FilmWidget.cpp  FilmWidget.h  Focus.cpp  (+89 more)
agave_app/icons/: dmg-icon.icns  logo.icns
agave_app/python/: CMakeLists.txt  RenderInterface.h  ScriptServer.cpp  pyagave.cpp  pyrenderer.cpp  pyrenderer.h
agave_app/qtControls/: CMakeLists.txt  Controls.cpp  Controls.h  RangeWidget.cpp  controlFactory.cpp  controlFactory.h
agave_app/tfeditor/: CMakeLists.txt  gradients.cpp  gradients.h  hoverpoints.cpp  hoverpoints.h  qcustomplot.cpp  qcustomplot.h
agave_pyclient/: .buildinfo  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  agave_renderer.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
agave_pyclient/_modules/: index.html
agave_pyclient/_sources/: index.rst.txt
agave_pyclient/_static/: documentation_options.js
agave_pyclient/agave_pyclient/: __init__.py  agave.py  agave_client.py  commandbuffer.py  find_agave.py
agave_pyclient/docs/: Makefile  agave_renderer.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt
ome2vdb/: CMakeLists.txt  ome2vdb.cpp
qtome/: Aperture.cpp  Aperture.h  ApertureWidget.cpp  ApertureWidget.h  AppearanceDockWidget.cpp  AppearanceDockWidget.h  AppearanceSettingsWidget.cpp  AppearanceSettingsWidget.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraDockWidget.cpp  CameraDockWidget.h  CameraWidget.cpp  CameraWidget.h  Controls.cpp  Controls.h  Film.cpp  Film.h  FilmWidget.cpp  FilmWidget.h  Focus.cpp  Focus.h  FocusWidget.cpp  FocusWidget.h  GLContainer.cpp  GLContainer.h  GLView2D.cpp  GLView2D.h  GLView3D.cpp  GLView3D.h  GLWindow.cpp  GLWindow.h  NavigationDock2D.cpp  NavigationDock2D.h  Projection.cpp  Projection.h  ProjectionWidget.cpp  (+32 more)
qtome/python/: CMakeLists.txt  RenderInterface.h  ScriptServer.cpp  ScriptServer.h  pyagave.cpp  pyrenderer.cpp  pyrenderer.h
qtome/tfeditor/: CMakeLists.txt  gradients.cpp  gradients.h  hoverpoints.cpp  hoverpoints.h
renderlib/: AppScene.cpp  AppScene.h  AppearanceDataObject.cpp  AppearanceDataObject.hpp  AppearanceObject.cpp  AppearanceObject.hpp  AppearanceUiDescription.cpp  AppearanceUiDescription.hpp  AreaLightObject.cpp  AreaLightObject.hpp  AreaLightTool.cpp  AreaLightTool.h  ArealightObject.cpp  ArealightObject.hpp  AxisHelperTool.cpp  AxisHelperTool.h  BoundingBox.cpp  BoundingBox.h  BoundingBoxTool.cpp  BoundingBoxTool.h  CCamera.cpp  CCamera.h  CMakeLists.txt  CacheConfig.h  CacheManager.cpp  CacheManager.h  Camera.h  CameraDataObject.cpp  CameraDataObject.hpp  CameraObject.cpp  CameraObject.hpp  CameraUiDescription.cpp  CameraUiDescription.hpp  ChannelSettingsDataObject.cpp  ChannelSettingsDataObject.hpp  ClipPlaneObject.cpp  ClipPlaneObject.hpp  ClipPlaneTool.cpp  ClipPlaneTool.h  Colormap.cpp  (+123 more)
renderlib/core/: CMakeLists.txt
renderlib/cudarndr/: BasicVolumeRender.cu  BasicVolumeRender.cuh  Blur.cuh  BoundingBox.h  Buffer.cuh  CMakeLists.txt  Camera.cuh  Camera2.cuh  Camera2Impl.cuh  Checkerboard.cu  Checkerboard.cuh  Checkerboard2.cu  Checkerboard2.cuh  Core.cu  Core.cuh  CudaUtilities.cpp  CudaUtilities.h  Defines.h  Denoise.cuh  DenoiseParams.cuh  Enumerations.h  Estimate.cuh  Geometry.cpp  Geometry.h  Lighting.cuh  Lighting2.cu  Lighting2.cuh  Lighting2Impl.cuh  MonteCarlo.cuh  NearestIntersection.cuh  RNG.cuh  RayMarching.cuh  RenderThread.cpp  RenderThread.h  Sample.cuh  Shader.cuh  SingleScattering.cuh  Spectrum.cpp  Spectrum.h  Stable.cpp  (+11 more)
renderlib/gesture/: CMakeLists.txt  gesture.cpp  gesture.h
renderlib/gfxOpenGL/: Backend.cpp  Backend.h  CMakeLists.txt  Device.cpp  Device.h  FSQ.cpp  FSQ.h  FontGL.cpp  GLContext.cpp  GLContext.h  GLFramebufferObject.cpp  GestureRenderer.h  (+18 more)
renderlib2/: CMakeLists.txt  Enumerate.hpp  renderlib2.cpp  renderlib2.h  version.h.in  vk.h
renderlib_wgpu/: CMakeLists.txt  RenderWgpuPT.cpp  RenderWgpuPT.h  getsurface_wgpu.cpp  getsurface_wgpu.h  getsurface_wgpu_mac.c  getsurface_wgpu_mac.h  renderlib_wgpu.cpp  renderlib_wgpu.h  wgpu_util.cpp  wgpu_util.h
test/: CMakeLists.txt  catch.hpp  test_AppearanceObject.cpp  test_CameraObject.cpp  test_LightObjects.cpp  test_cacheManager.cpp  test_commands.cpp  test_docReader.cpp  test_docWriter.cpp  test_histogram.cpp  test_lights.cpp  test_main.cpp  test_mathUtil.cpp  test_prty.cpp  test_serialize.cpp  test_stringUtil.cpp  test_timeLine.cpp  test_version.cpp  test_volumeDimensions.cpp
websocketserver/: CMakeLists.txt  cgiparser.cpp  cgiparser.h  command.cpp  command.h  commandBuffer.cpp  commandBuffer.h  main.cpp  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  renderparameters.cpp  renderparameters.h  renderrequest.cpp  renderrequest.h  streamserver.cpp  streamserver.h  util.cpp  util.h  version.rc
(+498 files in other folders)
